<resources>
    <string name="app_name">GPSLoggerFlight</string>
    <string name="settings_screen_name">GPSLogger Settings</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="could_not_write_to_file">Could not write to file</string>
    <string name="description_added">Description added to file</string>
    <string name="not_yet">Not Yet</string>
    <string name="cant_add_description_until_next_point">You can\'t add a description until the next point has been
        logged to a file.
    </string>
    <string name="add_description">Add a description</string>
    <string name="letters_numbers">Use only letters and numbers</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_pexp">Export Settings</string>
    <string name="menu_pimp">Import Settings</string>
    <string name="menu_annotate">Annotate</string>
    <string name="menu_share">Share</string>
    <string name="menu_exit">Exit</string>
    <string name="ExportSuccess">Settings exported successfully</string>
    <string name="ExportFailed">Failed to export settings</string>
    <string name="ImportSuccess">Settings imported successfully</string>
    <string name="ImportFailed">Failed to import settings</string>
    <string name="AskFileName">Enter the file name without extension</string>
    <string name="ChooseFile">Choose file</string>
    <string name="SelectFile">Select file</string>
    <string name="Browse">Browse...</string>
    <string name="NoFSBrowser">No filesystem browser installed</string>
    <string name="FileExists">File already exists</string>
    <string name="AskAnotherFile">Please, enter another name</string>
    <string name="txt_latitude">Latitude:</string>
    <string name="txt_longitude">Longitude:</string>
    <string name="txt_altitude">Altitude:</string>
    <string name="txt_speed">Speed:</string>
    <string name="txt_direction">Direction:</string>
    <string name="txt_satellites">Satellites:</string>
    <string name="txt_accuracy">Accuracy:</string>
    <string name="txt_travel_distance">Travelled:</string>
    <string name="btn_start_logging">Start Logging</string>
    <string name="btn_stop_logging">Stop Logging</string>
    <string name="gpslogger_still_running">GPSLogger is still running.</string>
    <string name="summary_loggingto">Logging to:</string>
    <string name="summary_loggingto_screen">screen only</string>
    <string name="summary_freq_every">Frequency:</string>
    <string name="summary_freq_max">maximum</string>
    <string name="summary_dist">Distance:</string>
    <string name="summary_dist_regardless">maximum</string>
    <string name="summary_current_filename">File:</string>
    <string name="summary_current_filename_format">%s (in your GPSLogger folder)</string>
    <string name="altitude">Altitude</string>
    <string name="speed">Speed</string>
    <string name="direction">Direction</string>
    <string name="glideratio">Glide Ratio</string>
    <string name="sharing_location_only">Location only</string>
    <string name="sharing_pick_file">Pick a file to share</string>
    <string name="sharing_mylocation">My location</string>
    <string name="sharing_via">Share via</string>
    <string name="sharing_template_default">TS\nLATDD LONDD\nLATD LATMD LOND LONMD\nLATD LATM LATSD LOND LONM LONSD\nhttp://maps.google.com/maps?q=LATDD,LONDD</string>
    <string name="latitude_degree_decimal">LATDD</string>
    <string name="longitude_degree_decimal">LONDD</string>
    <string name="latitude_degree">LATD</string>
    <string name="longitude_degree">LOND</string>
    <string name="latitude_min_decimal">LATMD</string>
    <string name="longitude_min_decimal">LONMD</string>
    <string name="latitude_min">LATM</string>
    <string name="longitude_min">LONM</string>
    <string name="latitude_sec_decimal">LATSD</string>
    <string name="longitude_sec_decimal">LONSD</string>
    <string name="latitude_sec">LATS</string>
    <string name="longitude_sec">LONS</string>
    <string name="timestamp">TS</string>
    <string name="no_location">No location available</string>
    <string name="foot">&#160;foot</string>
    <string name="feet">&#160;feet</string>
    <string name="meter">&#160;meter</string>
    <string name="meters">&#160;meters</string>
    <string name="error">Error</string>
    <string name="error_connection">Connection Error. Please check your phone settings.</string>
    <string name="gpsprovider_unavailable">No GPS provider available. Please check your location settings and enable a
        location provider.
    </string>
    <string name="started">Started</string>
    <string name="providername_using">&#160;&#160;&#160;&#160;(Using %s)</string>
    <string name="providername_gps">GPS satellites</string>
    <string name="providername_celltower">cell towers</string>
    <string name="not_applicable">n/a</string>
    <string name="meters_per_second">&#160;m/s</string>
    <string name="feet_per_second">&#160;ft/s</string>
    <string name="miles_per_hour">&#160;mi/h</string>
    <string name="miles">&#160;mi</string>
    <string name="kilometers_per_hour">&#160;km/h</string>
    <string name="kilometers">&#160;km</string>
    <string name="unknown_direction">unknown</string>
    <string name="sorry">Sorry</string>
    <string name="success">Yay!</string>
    <string name="direction_roughly">Roughly %s</string>
    <string name="direction_north">North</string>
    <string name="direction_northnortheast">North by Northeast</string>
    <string name="direction_northeast">Northeast</string>
    <string name="direction_eastnortheast">East by Northeast</string>
    <string name="direction_east">East</string>
    <string name="direction_eastsoutheast">East by Southeast</string>
    <string name="direction_southeast">Southeast</string>
    <string name="direction_southsoutheast">South by Southeast</string>
    <string name="direction_south">South</string>
    <string name="direction_southsouthwest">South by Southwest</string>
    <string name="direction_southwest">Southwest</string>
    <string name="direction_westsouthwest">West by Southwest</string>
    <string name="direction_west">West</string>
    <string name="direction_westnorthwest">West by Northwest</string>
    <string name="direction_northwest">Northwest</string>
    <string name="direction_northnorthwest">North by Northwest</string>
    <string name="time_onesecond">1 second</string>
    <string name="time_halfminute">&#189; minute</string>
    <string name="time_oneminute">1 minute</string>
    <string name="time_onehour">1 hour</string>
    <string name="time_quarterhour">15 minutes</string>
    <string name="time_halfhour">&#189; hour</string>
    <string name="time_oneandhalfhours">1&#189; hours</string>
    <string name="time_twoandhalfhours">2&#189; hours</string>
    <string name="time_hms_format" formatted="false">%sh %sm %ss</string>
    <string name="accuracy_within" formatted="false">within %s %s</string>
    <string name="error_displaying">Error in displaying location info: %s</string>
    <string name="degree_symbol">&#176;</string>
    <string name="settings_distance_in_feet">Distance in feet</string>
    <string name="settings_distance_in_meters">Distance in meters</string>
    <string name="time_before_logging_dialog_title">Time in seconds</string>
    <string name="useimperial_title">Use Imperial units</string>
    <string name="useimperial_summary">Use feet, miles and pints, none of that newfangled metric stuff.</string>
    <string name="show_notification_title">Show Notification</string>
    <string name="show_notification_summary">Displays a reminder along with coordinates in the notification bar.
    </string>
    <string name="enabledisablegps_title">Enable/Disable GPS</string>
    <string name="enabledisablegps_summary">Go to the phone settings to enable or disable the providers.</string>
    <string name="startonbootup_title">Start on bootup</string>
    <string name="startonbootup_summary">Launch app and start logging when phone starts</string>
    <string name="osm_lbl_authorize">Authorize this app</string>
    <string name="osm_upload">OpenStreetMap</string>
    <string name="debuglog_title">Write to debug file</string>
    <string name="debuglog_summary">Writes debug messages to a file on the SD card. Warning: The file grows very fast.
    </string>
    <string name="dropbox_upload">Dropbox</string>
    <string name="menu_upload">Upload</string>
    <string name="gdocs_upload">Google Docs</string>
    <string name="gdocs_startauthorization">Authorize with Google Docs</string>
    <string name="gdocs_authorize_summary">Takes you to Google Docs where you need to authorize GPSLogger</string>
    <string name="gdocs_test_summary">Upload a test file to Google Docs</string>
    <string name="gdocs_test_title">Test upload</string>
    <string name="email_upload">Email a file</string>
    <string name="autosend_enabled">Allow auto sending</string>
    <string name="livetrack24_enabled">Enable livetrack24</string>
    <string name="livetrack24_enabled_summary">Enable this livetrack24 server.</string>
    <string name="livetrack24_server_category">livetrack24 Settings</string>
    <string name="livetrack24_server_url">Custom Server</string>
    <string name="livetrack24_server_url_summary">Custom submission URL</string>
    <string name="livetrack24_server_other">http://test.livetrack24.com</string>
    <string name="livetrack24_username">Username</string>
    <string name="livetrack24_password">Password</string>
    <string name="livetrack24_interval">Interval for sending data</string>
    <string name="livetrack24_interval_default">3</string>
    <string name="livetrack24_interval_summary">How often send data to Livetrack24 server</string>
    <string name="livetrack24_distance_before_logging">Distance before logging</string>
    <string name="livetrack24_distance_before_logging_summary">How far to travel before logging the next point to Livetrack24 server. Use 0 to log all points.</string>
    <string name="livetrack24_distance_before_logging_default">10</string>
    <string name="livetrack24_presets">Livetrack presets</string>
    <string name="livetrack24_presets_summary">Configure for leonardo, FFVL, ...</string>
    <string name="opengts_enabled">Enable OpenGTS</string>
    <string name="opengts_enabled_summary">Enable this OpenGTS server.</string>
    <string name="autoopengts_autosend">Enable Automatically Send</string>
    <string name="autoopengts_autosend_summary">Enables automatically sending the GPS traces.</string>
    <string name="autoopengts_server_category">OpenGTS Settings</string>
    <string name="opengts_upload">Send to OpenGTS</string>
    <string name="autoopengts_server">Server</string>
    <string name="autoopengts_server_summary">Hostname or IP</string>
    <string name="opengts_server_port">Port</string>
    <string name="opengts_server_communication_method">Communication Method</string>
    <string name="opengts_server_communication_method_summary">HTTP-based or Raw Socket Based communication</string>
    <string name="autoopengts_server_path">Server Path</string>
    <string name="autoopengts_server_path_summary">Optional and only for HTTP-based communication. For example \'/gprmc/Data\'</string>
    <string name="autoopengts_device_id">Device ID</string>
    <string name="opengts_interval">Interval for sending data</string>
    <string name="opengts_interval_default">60</string>
    <string name="opengts_interval_summary">How often send data to OpenGTS server</string>
    <string name="opengts_distance_before_logging">Distance before logging</string>
    <string name="opengts_distance_before_logging_summary">How far to travel before logging the next point to OpenGTS server. Use 0 to log all points.</string>
    <string name="opengts_distance_before_logging_default">10</string>
    <string name="ftp_upload">FTP upload</string>
</resources>