<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  android:key="opengts_preferences">

    <CheckBoxPreference android:key="opengts_enabled"
                        android:title="@string/opengts_enabled"
                        android:summary="@string/opengts_enabled_summary"
                        android:defaultValue="false"/>

    <CheckBoxPreference android:key="autoopengts_enabled"
                        android:title="@string/autoopengts_autosend"
                        android:summary="@string/autoopengts_autosend_summary"
                        android:defaultValue="false"/>

    <PreferenceCategory android:title="@string/autoopengts_server_category">

        <EditTextPreference android:key="opengts_server"
                            android:title="@string/autoopengts_server"
                            android:inputType="textUri"
                            android:summary="@string/autoopengts_server_summary"
                            android:dialogTitle="@string/autoopengts_server"
                            android:defaultValue=""/>

        <EditTextPreference android:key="opengts_server_port"
                            android:title="@string/opengts_server_port"
                            android:dialogTitle="@string/opengts_server_port"
                            android:inputType="number"
                            android:maxLength="5"
                            android:defaultValue="80"/>

        <ListPreference android:key="opengts_server_communication_method"
                        android:title="@string/opengts_server_communication_method"
                        android:summary="@string/opengts_server_communication_method_summary"
                        android:entries="@array/opengts_server_communication_methods"
                        android:entryValues="@array/opengts_server_communication_methods_values"
                        android:defaultValue="0"/>

        <EditTextPreference android:key="autoopengts_server_path"
                            android:title="@string/autoopengts_server_path"
                            android:inputType="textUri"
                            android:summary="@string/autoopengts_server_path_summary"
                            android:dialogTitle="@string/autoopengts_server_path"
                            android:defaultValue=""/>

        <EditTextPreference android:key="opengts_device_id"
                            android:title="@string/autoopengts_device_id"
                            android:dialogTitle="@string/autoopengts_device_id"
                            android:defaultValue=""/>

        <EditTextPreference android:key="opengts_interval"
            android:title="@string/opengts_interval"
            android:summary="@string/opengts_interval_summary"
            android:dialogTitle="@string/time_before_logging_dialog_title"
            android:numeric="integer"
            android:maxLength="4"
            android:defaultValue="@string/opengts_interval_default"/>

        <EditTextPreference android:key="opengts_distance_before_logging"
            android:title="@string/opengts_distance_before_logging"
            android:summary="@string/opengts_distance_before_logging_summary"
            android:dialogTitle="@string/settings_distance_in_meters"
            android:numeric="integer"
            android:maxLength="5"
            android:defaultValue="@string/opengts_distance_before_logging_default"/>

    </PreferenceCategory>

</PreferenceScreen>