<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  android:key="livetrack24_preferences">

    <CheckBoxPreference android:key="livetrack24_enabled"
                        android:title="@string/livetrack24_enabled"
                        android:summary="@string/livetrack24_enabled_summary"
                        android:defaultValue="false"/>

    <PreferenceCategory android:title="@string/livetrack24_server_category">


         <ListPreference android:key="livetrack24_presets"
             android:title="@string/livetrack24_presets"
             android:summary="@string/livetrack24_presets_summary"
             android:entries="@array/livetrack24_preset_entries"
             android:defaultValue="leonardo"
             android:entryValues="@array/livetrack24_preset_values"/>

        <EditTextPreference android:key="livetrack24_server_url"
                            android:title="@string/livetrack24_server_url"
                            android:inputType="textUri"
                            android:summary="@string/livetrack24_server_url_summary"
                            android:dialogTitle="@string/livetrack24_server_url"
                            android:defaultValue="@string/livetrack24_server_other"/>

        <EditTextPreference android:key="livetrack24_username"
                            android:title="@string/livetrack24_username"
                            android:dialogTitle="@string/livetrack24_username"
                            android:defaultValue=""/>

        <EditTextPreference android:key="livetrack24_password"
                            android:title="@string/livetrack24_password"
                            android:dialogTitle="@string/livetrack24_password"
                            android:inputType="textPassword"
                            android:defaultValue=""/>

        <EditTextPreference android:key="livetrack24_interval"
                            android:title="@string/livetrack24_interval"
                            android:summary="@string/livetrack24_interval_summary"
                            android:dialogTitle="@string/time_before_logging_dialog_title"
                            android:numeric="integer"
                            android:maxLength="4"
                            android:defaultValue="@string/livetrack24_interval_default"/>

        <EditTextPreference android:key="livetrack24_distance_before_logging"
                            android:title="@string/livetrack24_distance_before_logging"
                            android:summary="@string/livetrack24_distance_before_logging_summary"
                            android:dialogTitle="@string/settings_distance_in_meters"
                            android:numeric="integer"
                            android:maxLength="5"
                            android:defaultValue="@string/livetrack24_distance_before_logging_default"/>

    </PreferenceCategory>

</PreferenceScreen>