<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">




    <item android:id="@+id/mnuAnnotate" android:title="@string/menu_annotate" android:icon="@android:drawable/ic_menu_edit" android:showAsAction="always" />

    <item android:id="@+id/mnuOnePoint" android:title="@string/menu_onepoint" android:icon="@drawable/ic_action_one" android:showAsAction="always" />


    <item android:id="@+id/mnuUpload" android:title="@string/menu_upload" android:icon="@android:drawable/ic_menu_upload" android:showAsAction="always">
        <menu>
            <item android:id="@+id/mnuDropBox" android:title="@string/dropbox_upload" />
            <item android:id="@+id/mnuOSM" android:title="@string/osm_upload" />
            <item android:id="@+id/mnuGDocs" android:title="@string/gdocs_upload" />
            <item android:id="@+id/mnuEmail" android:title="@string/email_upload"/>
            <item android:id="@+id/mnuOpenGTS" android:title="@string/opengts_upload"/>
            <item android:id="@+id/mnuFtp" android:title="@string/ftp_upload" />

        </menu>
    </item>


    <item android:id="@+id/mnuShare" android:title="@string/menu_share" android:icon="@android:drawable/ic_menu_share" android:showAsAction="always"  />






</menu>