<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <com.mendhak.gpslogger.views.component.CustomSwitchPreference android:key="gdocs_enabled"
                                                                  android:title="@string/autosend_enabled"/>

    <Preference android:key="gdocs_resetauth" android:summary="@string/gdocs_authorize_summary"
                android:title="@string/gdocs_startauthorization" />

    <com.afollestad.materialdialogs.prefs.MaterialEditTextPreference android:key="gdocs_foldername"
                                                                     android:title="Folder name"
                                                                     android:defaultValue="GPSLogger for Android"
        />
    
    <Preference android:key="gdocs_test" android:summary="@string/gdocs_test_summary"
                android:title="@string/gdocs_test_title" />


</PreferenceScreen>